--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -388,7 +388,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/foto-hero1.jpg") top right;
+  background: url("../img/foto_hero1.jpg") top right;
   background-size: cover;
 }
 
